Even more white space, some blur, and some small fixes

--- a/src/app/components/Common/ContextMenu/Types/Album/AlbumContextMenu.scss
+++ b/src/app/components/Common/ContextMenu/Types/Album/AlbumContextMenu.scss
@@ -43,7 +43,8 @@
 
     h2, h3 {
       font-size: 12px;
-      color: $text_color;
+      color: $text_color_strong;
+      font-weight: 400;
     }
 
     h3 {
