--- a/src/app/components/Common/Tracks/TracksList/TracksListItem.scss
+++ b/src/app/components/Common/Tracks/TracksList/TracksListItem.scss
@@ -15,6 +15,7 @@
     font-size: 11px;
     min-height: 25px;
     position: relative;
+    padding-left: 10px;
 
     > span {
       display: flex;
